<resources>
    <string name="app_name">TuristaMobileApp</string>
    <string name="welcome_button">DAYON KAMO</string>
    <string name="logo_turista">LOGO TURISTA</string>
    <string name="admin_user">ADMIN USER</string>
    <string name="turista_user">TURISTA USER</string>
    <string name="admin_login_portal">ADMIN LOGIN PORTAL</string>
    <string name="admin_username">ADMIN USERNAME</string>
    <string name="admin_password">ADMIN PASSWORD</string>
    <string name="admin_cancel">ADMIN CANCEL</string>
    <string name="admin_submit">ADMIN SUBMIT</string>
    <string name="list_of_tourist_registered">LIST OF TOURIST REGISTERED</string>
    <string name="admin_log_out">ADMIN LOG-OUT</string>
    <string name="admin_menu_portal">ADMIN MENU PORTAL</string>
    <string name="admin_menu">ADMIN MENU</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="address">ADDRESS</string>
    <string name="place_of_origin">PLACE OF ORIGIN</string>
    <string name="age">AGE</string>
    <string name="gender">GENDER</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="turista_login_portal">TURISTA LOGIN PORTAL</string>
    <string name="turista_username">TURISTA USERNAME</string>
    <string name="turista_password">TURISTA PASSWORD</string>
    <string name="turista_cancel">TURISTA CANCEL</string>
    <string name="turista_new_register">TURISTA NEW REGISTER</string>
    <string name="turista_submit">TURISTA SUBMIT</string>
    <string name="turista_registration_portal">TURISTA REGISTRATION PORTAL</string>
    <string name="dayon_kamo">DAYON KAMO</string>
    <string name="history_portal">HISTORY PORTAL</string>
    <string name="fun_facts_portal">FUN FACTS PORTAL</string>
    <string name="gallery_portal">GALLERY PORTAL</string>
    <string name="tourism_information_portal">TOURISM INFORMATION PORTAL</string>
    <string name="turista_logout">TURISTA LOGOUT</string>
    <string name="history_menu_portal">HISTORY MENU PORTAL</string>
    <string name="dumaguete_city">DUMAGUETE CITY</string>
    <string name="municipality_of_sibulan">MUNICIPALITY OF SIBULAN</string>
    <string name="municipality_of_bacong">MUNICIPALITY OF BACONG</string>
    <string name="municipality_of_valencia">MUNICIPALITY OF VALENCIA</string>
    <string name="turista_menu">TURISTA MENU</string>
    <string name="menu">MENU</string>
    <string name="text_history_one">“Dumaguete” was coined from the Cebuano word dagit, which means “to snatch”. The word dumaguet, meaning “to swoop”, was coined because of frequent raids by Moro pirates on this coastal community and its power to attract and keep visitors, both local and foreign.\n\nIn 1572, Diego Lopez Povedano indicated the place as Dananguet, but cartographer Pedro Murillo Velarde in 1734 already used present name of Dumaguete for the settlement.</string>
    <string name="text_history_two">Noting the wealth of springs in this area, the Spaniards named it ‘Land of Sibuls’ which meant land of numerous springs.\n\nInfluence of time, as well as elements of change, got the name of this municipality modified to Sibulan, its present name. In 1838, this town became a Parish under secular order.\n\nIn 1856, the parish was occupied by a regular church priest. Then, in 1910, Sibulan had its initial set of municipal government officials once it became a municipality.\n\nThis was in accordance to Act No. 82 of the Philippine Commission dated January 31, 1910. Macario Literal was the first appointed municipal mayor.</string>
    <string name="text_history_three">Founded in 1801, the historical importance of Bacong is well documented: it is the birthplace of General Pantaleon Villegas, Negros Oriental’s hero and only Katipunero, whose birthday is celebrated as “Leon Kilat Celebration” every July 27. Also, Barrio Isugan was the location of a battle between the Filipino and American soldiers. Every 28th of August they also Celebrate Fiesta Saint Agustin.</string>
    <string name="text_history_four">The former name of the municipality was originally Ermita, meaning “a secluded place”. The town got that name due to its being a refuge from the assaults of the marauding Muslim pirates.\n\nIn the year 1856, the Spanish colonizers renamed Ermita to Nueva Valencia, in honor of its parish priest from Valencia, a region in Spain. In the year 1920, it was renamed Luzuriaga in honor of Don Carlos Luzuriaga, a delegate from Negros Island to the Philippine Legislature.\n\nThe town was finally renamed to its name in the year 1948.</string>
    <string name="list_of_barangay">LIST OF BARANGAY</string>
    <string name="home">Home</string>
    <string name="previous_facts">PREVIOUS FACTS</string>
    <string name="next_facts">NEXT FACTS</string>
    <string name="photo_gallery">PHOTO GALLERY</string>
    <string name="video_gallery">VIDEO GALLERY</string>
    <string name="previous_photo">PREVIOUS PHOTO</string>
    <string name="next_photo">NEXT PHOTO</string>
    <string name="name_place">NAME PLACE</string>
    <string name="barangay_name">barangay name</string>
    <string name="hotels">HOTELS</string>
    <string name="beach_resorts">BEACH RESORTS</string>
    <string name="restaurants">RESTAURANTS</string>
    <string name="schools">SCHOOLS</string>
    <string name="hospitals">HOSPITALS</string>
    <string name="malls">MALLS</string>
    <string name="church">CHURCH</string>
    <string name="banks">BANKS</string>
    <string name="transportations">TRANSPORTATIONS</string>
    <string name="tourists_spots">TOURISTS SPOTS</string>
    <string name="tourism_office_hubs">TOURISM OFFICE HUBS</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="hotel_name">HOTEL NAME</string>
    <string name="hotel_address">HOTEL ADDRESS</string>
    <string name="contact_number">CONTACT NUMBER</string>
    <string name="hotel_page_link">HOTEL PAGE LINK</string>
    <string name="navigation_map">NAVIGATION MAP</string>
    <string name="resorts_name">RESORTS NAME</string>
    <string name="resort_address">RESORT ADDRESS</string>
    <string name="resort_page_link">RESORT PAGE LINK</string>
    <string name="resto_name">RESTO NAME</string>
    <string name="resto_address">RESTO ADDRESS</string>
    <string name="resto_contact_number">RESTO CONTACT NUMBER</string>
    <string name="resto_page_link">RESTO PAGE LINK</string>
    <string name="school_name">SCHOOL NAME</string>
    <string name="school_address">SCHOOL ADDRESS</string>
    <string name="school_contact_number">SCHOOL CONTACT NUMBER</string>
    <string name="school_page_link_one">SCHOOL PAGE LINK ONE</string>
    <string name="school_page_link_two">SCHOOL PAGE LINK TWO</string>
    <string name="hospital_name">HOSPITAL NAME</string>
    <string name="hospital_address">HOSPITAL ADDRESS</string>
    <string name="hospital_contact_number">HOSPITAL CONTACT NUMBER</string>
    <string name="hospital_page_link">HOSPITAL PAGE LINK</string>
    <string name="mall_name">MALL NAME</string>
    <string name="mall_address">MALL ADDRESS</string>
    <string name="mall_contact_number">MALL CONTACT NUMBER</string>
    <string name="mall_page_link">MALL PAGE LINK</string>
    <string name="church_name">CHURCH NAME</string>
    <string name="church_address">CHURCH ADDRESS</string>
    <string name="church_contact_number">CHURCH CONTACT NUMBER</string>
    <string name="church_page_link">CHURCH PAGE LINK</string>
    <string name="bank_name">BANK NAME</string>
    <string name="bank_address">BANK ADDRESS</string>
    <string name="bank_contact_number">BANK CONTACT NUMBER</string>
    <string name="bank_page_link">BANK PAGE LINK</string>
    <string name="port_name">PORT NAME</string>
    <string name="port_address">PORT ADDRESS</string>
    <string name="port_contact_number">PORT CONTACT NUMBER</string>
    <string name="tourism_office_name">TOURISM OFFICE NAME</string>
    <string name="tourism_office_address">TOURISM OFFICE ADDRESS</string>
    <string name="tourism_office_contact_number">TOURISM OFFICE CONTACT NUMBER</string>
    <string name="tourism_office_page_link">TOURISM OFFICE PAGE LINK</string>


</resources>
