<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_login_portal"
    android:background="#FFD3B0">

    <ImageView
        android:id="@+id/image_turista_logo"
        android:layout_width="351dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/logo_turista"
        android:src="@drawable/logo_turista"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView_admin"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="387dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:background="#F45050"
        android:fontFamily="sans-serif"
        android:text="@string/admin_login_portal"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedVw_admin_login"
        android:layout_width="352dp"
        android:layout_height="260dp"
        android:layout_marginStart="27dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="452dp">


        <GridLayout
            android:id="@+id/grid_admin_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1"
            android:rowCount="1">

            <EditText
                android:id="@+id/edit_admin_username"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/admin_username"
                android:autofillHints="username"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/edit_admin_password"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:inputType="textVisiblePassword"
                android:hint="@string/admin_password"
                android:autofillHints="password"
                android:textStyle="bold"
                android:textColorHint="@color/black"
                android:textAlignment="center"
                android:layout_height="70dp"/>

            <Button
                android:id="@+id/button_admin_cancel"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/admin_cancel"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button_admin_submit"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/admin_submit"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/teal_700"
                android:layout_height="100dp"/>
        </GridLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>